Fix header spacing bug that moved CartButton & logo

--- a/src/components/Navbar/styles/cartButton.module.css
+++ b/src/components/Navbar/styles/cartButton.module.css
@@ -13,6 +13,7 @@
 
 @media (min-width: 700px) {
   .cartBtn {
+    width: 115px;
     font-size: 1.4rem;
   }
 }
